--- a/.github/workflows/main_mmc-event.yml
+++ b/.github/workflows/main_mmc-event.yml
@@ -1,65 +1,57 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - mmc-event
-
+ 
+name: Build and deploy ASP.Net Core app to Azure Web App - mmcgateway
+ 
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
+ 
 jobs:
   build:
     runs-on: windows-latest
-
+ 
     steps:
       - uses: actions/checkout@v4
-
+ 
       - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.x'
-
+          include-prerelease: true
+ 
       - name: Build with dotnet
         run: dotnet build --configuration Release
-
+ 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
+ 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
-
+ 
   deploy:
     runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+ 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_15ABF070EAA04B3D9CFAF977F5481937 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_634688F4429E445DAEB50FDBA065ED49 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E00FFB3BD5BB48E69C4383EDA7FC8A95 }}
-
+ 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
           app-name: 'mmc-event'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DBAA82409CDA4B36BFCE758FE3E3D6C5 }}
           package: .
-          
