--- a/EventService.API/EventServices.API.csproj
+++ b/EventService.API/EventServices.API.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.22.2" />
@@ -19,13 +17,8 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\EventService.Application\EventService.Application.csproj" />
-    <ProjectReference Include="..\EventService.Domain\EventService.Domain.csproj" />
-    <ProjectReference Include="..\EventService.Infrastructure\EventService.Infrastructure.csproj" />
-    <!--<ProjectReference Include="..\EventService.Domain\EventService.Domain\EventService.Domain.csproj" />-->
-    <!--<ProjectReference Include="..\EventService.Infrastructure\EventService.Infrastructure.csproj" />-->
+    <ProjectReference Include="..\EventService.Domain\EventServices.Domain.csproj" />
+    <ProjectReference Include="..\EventService.Infrastructure\EventServices.Infrastructure.csproj" />
   </ItemGroup>
-
 </Project>
