--- a/EventService.API/EventServices.API.csproj
+++ b/EventService.API/EventServices.API.csproj
@@ -22,4 +22,7 @@
     <ProjectReference Include="..\EventService.Domain\EventServices.Domain.csproj" />
     <ProjectReference Include="..\EventService.Infrastructure\EventServices.Infrastructure.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\" />
+  </ItemGroup>
 </Project>
