--- a/EventService.API/EventServices.API.csproj
+++ b/EventService.API/EventServices.API.csproj
@@ -25,4 +25,9 @@
   <ItemGroup>
     <Folder Include="wwwroot\Files\" />
   </ItemGroup>
+  <ItemGroup>
+  <None Update="wwwroot\Files\*">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+</ItemGroup>
 </Project>
